Minor spacing fixes

--- a/css/ngo.css
+++ b/css/ngo.css
@@ -196,7 +196,7 @@ body {
     }
 
     #viewhelpprograms{
-        width: 130%
+        width: auto
     }
 
     #viewdonationcards{
